ClusterSetup/RestrictingDefaultAccessNetworkPolicies/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: nptest
  labels:
    app: client
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command:
        [
          "sh",
          "-c",
          "while true; do curl -m 3 <Nginx Pod Cluster IP address>; sleep 5; done",
        ]
